Refactor: 응답 DTO에 지원자 수 추가